# notionsupabasesync

./: .env.example  .gitignore  pyproject.toml  readme.md  requirements-dev.txt
.github/: CODEOWNERS  pull_request_template.md
docs/: compare.md
n8n/: README.md
n8n/workflows/: README.md
ops/: README.md
python-service/: README.md
python-service/app/: main.py  mapping.py  notion.py  sb.py
python-service/app/tests/: test_main.py
sync-core/: README.md
